--- a/src/main/webapp/WEB-INF/flows/main.xhtml
+++ b/src/main/webapp/WEB-INF/flows/main.xhtml
@@ -10,10 +10,10 @@
     <h:head>
         <title><ui:insert name="My lib"/> My Library</title>
     </h:head>
-    <h:body style="background-image: url('../../main/resources/images/fon.jpg')">
+    <h:body style="background-image: url('../../resources/images/fon.jpg')">
 
         <h:form style="text-align: center">
-                <h:graphicImage url="../../main/resources/images/my.png"  width="50%"  />
+                <h:graphicImage library="images" name="my.png"  width="50%"  />
         </h:form>
 
     <h:form>
